added a css class

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,3 +24,8 @@ background-color: lightgray;
 #tmResults {
     background-color: lightgray;
 }
+.history-btn :hover {
+   cursor: pointer;
+   background-color: lightgray;
+    
+}
