--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,20 +1,13 @@
 
-html, body { 
-    margin: 0;
-    padding: 0;
-}
-html {
-    height: 100%;
-}
-body {
+/* body {
     min-height: 100%;
-}
+} */
 #resultsPage {
     display: none;
 }
-.content {
+/* .content {
     margin-bottom: 0px;
-}
+} */
 .navbar {
     display: flex;
     justify-content: center;
@@ -28,18 +21,19 @@ body {
 }
 html {
     background-color: lightgray;
+    /* height: 100%; */
 }
 td table thead {
     background-color: lightgray;
 }
-.columns {
+/* .columns {
     background-image: url("https://image.shutterstock.com/image-vector/ui-image-placeholder-wireframes-apps-260nw-1037719204.jpg");
     background-size: cover;
     position: relative;
     top: 0;
     
 
-}
+} */
 #resultsTable {
 background-color: transparent;
 padding: 0px;
@@ -60,8 +54,6 @@ top: 5px;
 
 }
 
-    
-}
 #search-history li {
     display: flex;
     justify-content: center;
