--- a/assets/styles.css
+++ b/assets/styles.css
@@ -26,29 +26,33 @@ body {
 .navbar p {
     color: white
 }
-html {
+/* html {
     background-color: lightgray;
-}
-td table thead {
+} */
+/* td table thead {
     background-color: lightgray;
-}
+} */
 .columns {
-    background-image: url("https://image.shutterstock.com/image-vector/ui-image-placeholder-wireframes-apps-260nw-1037719204.jpg");
+    background-image: url("https://user-images.githubusercontent.com/95504111/148597639-7ed3eac6-1cfc-49cf-8199-cf86950dc353.jpg");
     background-size: cover;
     position: relative;
     top: 0;
+    min-width: 100%;
     
 
 }
 #resultsTable {
-background-color: transparent;
+background-color:  rgba(211, 211, 211, 0.404);
+margin-left: 10%;
+/* margin-bottom: 0%; */
 padding: 0px;
-margin: 0px;
+/* margin: 0px; */
 top: 5px;
 }
 
 #tmResults {
-    background-color: transparent;
+    background-color: rgba(211, 211, 211, 0.404);
+    /* margin-right: 20%; */
     top: 5px;
 }
 #searchPage {
@@ -60,7 +64,10 @@ top: 5px;
 
 
 }
-
+td, a {
+    font-weight: bold;
+    color: white;
+}
     
 
 #search-history li {
